some attempts to style form

--- a/Vladislav/styles.css
+++ b/Vladislav/styles.css
@@ -30,6 +30,11 @@ table {
     color: #ffffff;
     background-color:#000000;
   }
+.dataSheet{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 .mainTitle{
   text-align: center;
   font-family: Helvetica;
@@ -114,4 +119,8 @@ top: 881px;
   position: absolute;
   left: 705px;
   top: 976px;
+}
+.submissionForm{
+  max-width: 1000px;
+  
 }
