--- a/Vladislav/Experimenting/styles.css
+++ b/Vladislav/Experimenting/styles.css
@@ -43,7 +43,7 @@ table {
   font-size: 64px;
   line-height: 75px;
   background-color: #000000;
-  color: #ffffff;
+  color: #eeeeee;
 }
 .profilePic{
   display: block;
